--- a/UILayer/Views/Home.xaml
+++ b/UILayer/Views/Home.xaml
@@ -7,10 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid>
+    <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
-            <ColumnDefinition Width="5"/> <!-- Spacer -->
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -21,9 +20,8 @@
         <!-- Right side: Tour Details and Logs -->
         <Grid Grid.Column="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>  <!-- Navbar height -->
-                <RowDefinition Height="200"/> <!-- Map/Image area -->
-                <RowDefinition Height="5"/>   <!-- Spacer -->
+                <RowDefinition Height="Auto"/>  <!-- Navbar height -->
+                <RowDefinition Height="*"/> <!-- Map/Image area -->
                 <RowDefinition Height="Auto"/> <!-- Tour Logs header -->
                 <RowDefinition Height="*"/>   <!-- Tour Logs list -->
             </Grid.RowDefinitions>
