--- a/UILayer/Views/TourList.xaml
+++ b/UILayer/Views/TourList.xaml
@@ -15,8 +15,9 @@
                 <DataTemplate>
                     <TextBlock Text="{Binding Name}"
                                Foreground="Black"
-                               FontSize="18"
-                               FontFamily="Dubai"/>
+                               FontSize="16"
+                               Margin="0,10"
+                               FontFamily="/UILayer/Resources/Fonts/#Montserrat"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
             <ListView.ItemContainerStyle>
