--- a/UILayer/Views/TourNavbar.xaml
+++ b/UILayer/Views/TourNavbar.xaml
@@ -6,23 +6,17 @@
              xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    
+
     <Grid>
         <StackPanel Orientation="Horizontal"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch">
             <Button Content="General"
-                    Background="#0078D7"
-                    FontSize="18"
-                    VerticalContentAlignment="Center"/>
+                    Style="{StaticResource NavbarButtonStyle}"/>
             <Button Content="Route"
-                    Background="#0078D7"
-                    FontSize="18"
-                    VerticalContentAlignment="Center"/>
+                    Style="{StaticResource NavbarButtonStyle}"/>
             <Button Content="Misc"
-                    Background="#0078D7"
-                    FontSize="18"
-                    VerticalContentAlignment="Center"/>
+                    Style="{StaticResource NavbarButtonStyle}"/>
         </StackPanel>
     </Grid>
 </UserControl>
