--- a/UILayer/Theme/SubmitButtonTheme.xaml
+++ b/UILayer/Theme/SubmitButtonTheme.xaml
@@ -1,4 +1,32 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style x:Key="SubmitButtonStyle"
+           TargetType="Button">
+        <Setter Property="Background" Value="#86DC3D"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontFamily" Value="/UILayer/Resources/Fonts/#Montserrat"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="BorderThickness" Value="2.5"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Padding="10"
+                            CornerRadius="5"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                          HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#1F803E"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
